...
            android:textSize="@dimen/text_history_instruction"
            android:textStyle="italic"
            tools:text="@tools:sample/lorem"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/layout_bottom_padding_for_fab"
            android:paddingEnd="8dp"
...
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="gone"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonHistory"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
...
