<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/history_menu_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_compact_layout"
        android:icon="@drawable/ic_layout_compact_white_24dp"
        android:title="@string/history_menu_compact_layout"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_normal_layout"
        android:icon="@drawable/ic_layout_normal_white_24dp"
        android:title="@string/history_menu_normal_layout"
        android:visible="false"
        app:showAsAction="always" />

</menu>