<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/list_menu_add_hint"
        app:actionLayout="@layout/action_bar_edit_text_view"
        app:showAsAction="always|collapseActionView"/>

    <item android:id="@+id/action_reminder_info"
          android:icon="@drawable/ic_notifications_white_24dp"
          android:title="@string/list_menu_reminder_information"
          app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/list_menu_clear"
        app:showAsAction="never"/>

    <item android:id="@+id/action_notify"
          android:title="@string/list_menu_launch_notification"
          app:showAsAction="never"/>

    <item android:id="@+id/action_remind"
          android:title="@string/list_menu_activate_reminder"
          app:showAsAction="never"/>

    <!--<item android:id="@+id/action_email"
          android:title="@string/list_menu_email"
          app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_preferences"
        android:title="@string/list_menu_preferences"
        app:showAsAction="never"/>

</menu>