<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/edition_dialog_root"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingEnd="32dp"
              android:paddingLeft="32dp"
...
